# ward

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  ROADMAP.md  docker-compose.fail-closed.yml  docker-compose.pull.yml  docker-compose.user.yml  docker-compose.yml  mise.toml  package-lock.json  package.json
apps/api/: Dockerfile  package.json  (+1 more)
docs/: ARCHITECTURE.md  BUILD_PLAN.md  BUILD_STATUS.md  CLAIMS_AND_EVIDENCE.md  DEMO_SCRIPT.md  DEPLOYMENT_MODEL.md  DESIGN_PARTNER_EVALUATION_SCRIPT.md  DESIGN_PARTNER_QUICKSTART.md  DOCKER_RUNBOOK.md  ENVIRONMENT.md  EVALUATOR_QUICKSTART.md  EXISTING_SAAS_INTEGRATION.md  INTEGRATION_MODEL.md  KUBERNETES_PLAN.md  LOCAL_DEMO_RUNBOOK.md  NAMING_AND_POSITIONING.md  OBJECTIONS.md  OPERATOR_RUNBOOK.md  POST_PUBLISH_VERIFICATION.md  PRODUCT_SPINE.md  PROXY_DEMO_RUNBOOK.md  PUBLISH_READINESS.md  RC5_VISUAL_PROOF.md  RELEASE_CANDIDATE_CHECKLIST.md  SAASTLE_INTERNAL_APP_DIRECTION.md  SAASTLE_SOURCE_MAP.md  SQLITE_DEPLOYMENT.md  STRATEGY_A_C_THEN_B.md  USER_INSTALL_NO_NPM.md
openapi/: ward.v0.json  ward.v0.yaml
scripts/: bench-latency.mjs  build-image.sh  export-incident-receipt.mjs  smoke-audit-durability.mjs  smoke-demo.mjs  smoke-incident-receipt.mjs  smoke-observe-only.mjs  smoke-openapi-conformance.mjs  smoke-pass-through-mock.mjs  smoke-rc3-failure-behavior.mjs  smoke-reliability.mjs  smoke-sdk-guard.mjs  smoke-streaming-mock.mjs  smoke-tenant-mode-override.mjs  smoke-user-install.sh  validate-openapi.mjs  verify-release.sh
tools/wardctl/: README.md  pyproject.toml
tools/wardctl/src/wardctl/: __init__.py  cli.py
(+69 files in other folders)
